--- a/src/Makefile
+++ b/src/Makefile
@@ -89,7 +89,8 @@ OFLAGS += nobits_virtual 0
 endif
 
 #same problems like ocompiler and arm #ATLDCOM = $(CC) ${linkerflags} ${eobs} -shared -e DllMain -o ${name} -lc -L. -l:${exte} -Wl,--exclude-libs ${exte}
-ATLDCOM = $(LD) ${linkerflags} --dynamic-linker=/lib64/ld-linux-x86-64.so.2 ${eobs} -shared -e DllMain -o ${name} -l:libc.so.6 ${L} `pkg-config --libs zlib` -L. -l:${exte} --build-id --exclude-libs ${exte}
+ATLDCOM = $(LD) ${linkerflags} -z noexecstack --dynamic-linker=/lib64/ld-linux-x86-64.so.2 ${eobs} -shared -e DllMain -o ${name} -l:libc.so.6 ${L} `pkg-config --libs zlib` -L. -l:${exte} --build-id --exclude-libs ${exte}
+#noexecstack is for arch linux, and also for old apy test
 #and pkg-config for -lc? is not in libc6-dev. where is?
 #--build-id for rpm
 ifeq (${nobits_virtual},1)
